<resources>
    <string name="app_name">MLLD</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_new_workout">New Workout</string>
    <string name="title_activity_review_workouts">Review Workouts</string>
    <string name="title_activity_personal_bests">Personal Bests</string>
    <string name="title_activity_configure_exercises">Configure Exercises</string>
    <string name="title_main_page">Main Menu</string>
    <string name="title_activity_maintenance">Maintenance</string>

</resources>
